--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav class="navbar navbar-dark bg-dark px-3">
-    <a class="navbar-brand" href="/">🛍️ Shop</a>
+    <a class="navbar-brand" href="/">🛍️ Electronics Shop</a>
     <a class="btn btn-outline-light" href="{{ url_for('cart') }}">🛒 Cart</a>
   </nav>
   <div class="container mt-4">
